# kaufhansel

./: .babelrc.js  .gitignore  Procfile  README.md  build.gradle  graphql-queries.graphql  jest.client.config.js  jest.config.js  jest.server.config.js  package.json  settings.gradle  tsconfig.json  webpack.back.config.js  webpack.client.config.js  webpack.config.js  webpack.front.config.js  webpack.server.config.js
.github/workflows/: backend_and_web.yml  build.yml  build_backend_and_web.yml  build_flutter_frontend.yml
backend/: .gitignore  .project  ShoppinglistApplication.launch  build.gradle  code_style.xml  init_dev_database.sh  init_dev_mongo.js  init_replica_set.js  init_user.js  kaufhansel.service  kaufhansel_service_config  kaufhansel_service_config.template  run_dev_database.sh  wait_until_started.js
backend/public/: 1.main.js  1.main.js.map  README.MD  index.html  main.css  main.js.map  vendors.css.map
client/: webpack.config.js
client/src/: .eslintrc.js  ShoppingListBoard.test.tsx  ShoppingListItem.ts
flutter_frontend/: .gitignore  README.md  l10n.yaml  pubspec.yaml
flutter_frontend/android/: .gitignore
flutter_frontend/integration_test/: app_test.dart
flutter_frontend/lib/: async_operation_icon_button.dart  confirm_dialog.dart  create_shopping_list_dialog.dart  main.dart  (+23 more)
frontend/: build.gradle  package.json  prettier.config.js  webpack.config.common.js  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
public/: index.html  manifest.json
spring_boot_backend/: build.gradle  code_format.xml
src/: .eslintrc.js  App.tsx  CheckedStateRequest.ts  ShoppingListItem.ts  ShoppingListItem.tsx  ShoppingListItemComponent.test.tsx  ShoppingListItemComponent.tsx  index.js  index.tsx  schema.graphql  server.js  server.ts
status_display/: CMakeLists.txt  QtCreatorDeployment.txt  hello.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  raspberrypi-clang.cmake  raspberrypi-gcc.cmake  shoppingliststatuspoller.cpp  shoppingliststatuspoller.h
(+294 files in other folders)
